always left-align text in bubbles. actually fix fluid layout bug

--- a/webclient/app.css
+++ b/webclient/app.css
@@ -14,12 +14,13 @@ h1 {
     max-width: 1280px;
     margin: auto;
     margin-bottom: 80px ! important;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .roomName {
     text-align: right;
     font-size: 16pt;
-    margin-right: 20px;
     margin-bottom: 10px;
 }
 
@@ -54,7 +55,6 @@ h1 {
 .usersTable {
     float: right;
     width: 120px;
-    margin-right: 20px;
     border-collapse: collapse;
 }
 
@@ -106,9 +106,14 @@ h1 {
 
 /*** Message table ***/
 
+.messageTableWrapper {
+    width: auto;
+    margin-right: 120px;
+}
+
 .messageTable {
+    width: 100%;
     border-collapse: collapse;
-    width: 85%;
     margin-bottom: 100px;
 }
         
@@ -129,7 +134,6 @@ h1 {
 
 .rightBlock {
     width: 32px;
-    background-color: #fff;
     color: #888;
     line-height: 0;
     vertical-align: top;
@@ -171,6 +175,7 @@ h1 {
 }
 
 .mine .text .bubble {
+    text-align: left ! important;
     background-color: #ccc ! important;
 }
 
@@ -178,6 +183,8 @@ h1 {
 
 .header {
     margin-top: 12px ! important;
+    padding-left: 20px;
+    padding-right: 20px;
     max-width: 1280px;
     margin: auto;
     height: 60px;
